Force API level 1.7.0 or higher, tweak seeking